@@ -1,4 +1,5 @@
 3.0.15
+ * Fix timeout in ReplicationAwareTokenAllocatorTest (CASSANDRA-12784)
  * Make randompartitioner work with new vnode allocation (CASSANDRA-12647)
  * Add hint delivery metrics (CASSANDRA-12693)
  * Re-introduce off heap memtables (CASSANDRA-9472)
